# conquest

./: .env.local.example  .gitignore  Anchor.toml  CLAUDE.md  README.md  next.config.mjs  package-lock.json  package.json
app/: actions.ts  globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/global/: page.tsx
components/: BracketPanel.tsx  BrowseRoomsList.tsx  InviteLink.tsx  LandBar.tsx  LoginButton.tsx  MatchCard.tsx  MatchList.tsx  MikuCupCard.tsx  MikuPoolStats.tsx  MikuTimelinePanel.tsx  PlayerList.tsx  PrivyProviders.tsx  RoomList.tsx  RoomView.tsx  WagerCard.tsx  WagerFlowModal.tsx  WalletAddressBadge.tsx  WalletSelector.tsx  WinnerLoserBanner.tsx
docs/: txline-api-reference.md  txline-api.md  txline-score-shapes.md
idl/: conquest_bet.json  conquest_bet.ts
lib/: anchor-client.ts  bracket-data.ts  constants.ts  match-result.ts  miku-content.ts  mock-fixtures.ts  player-directory.ts  prediction-outcomes.ts  test-wallets.ts  txline.ts  use-active-wallet.ts  use-conquest-actions.ts  utils.ts
migrations/: deploy.ts
programs/conquest-bet/: Cargo.toml
programs/conquest-bet/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/conquest-bet/src/instructions/: accept_wager.rs  claim_victory.rs  create_room.rs  join_room.rs  mod.rs  place_miku_bet.rs  propose_wager.rs  reset_miku_cup.rs  resolve_miku_cup.rs  resolve_wager.rs
scripts/: fund-players.ts  resolve-live-match.ts  resolve-miku-cup.ts  txline-activate.ts
tests/: conquest-bet.ts
types/: index.ts  miku.ts  player.ts  prediction.ts  room.ts  txline.ts  wager.ts  wallet.ts
(+6 files in other folders)
